compiler/src/test/resources/golden/errors/type_arith_non_number.dawn
fn f() -> String = "a" + "b"
