compiler/src/test/resources/golden/errors/type_arith_non_number.err
error: arithmetic expects numbers, left side is String
  --> type_arith_non_number.dawn:1:20
  |
1 | fn f() -> String = "a" + "b"
  |                    ^^^
